# nexus

./: AGENTS.md  GEMINI.md  README.md  docker-compose.yml
frontend/: .dockerignore  Dockerfile  package.json  svelte.config.js
frontend/src/lib/: nexus.svelte.ts  types.ts  utils.ts
frontend/src/lib/components/credentials/: AddCredentialModal.svelte  CredentialsView.svelte
frontend/src/lib/components/execution/logs/: ChatMessagesPanel.svelte  LogsExecutionSummary.svelte  LogsOverviewPanel.svelte  LogsOverviewRows.svelte
frontend/src/lib/components/flow/: FlowCanvas.svelte  NodeContextMenu.svelte
frontend/src/lib/components/knowledge/: DataTableDetailsView.svelte  DataTableView.svelte  KnowledgeBaseView.svelte
frontend/src/lib/components/layout/: Header.svelte  RightPanel.svelte  Sidebar.svelte
frontend/src/lib/components/nodes/forms/: AgentForm.svelte  ChatTriggerForm.svelte  CodeForm.svelte  ConvertToFileForm.svelte  DataTableForm.svelte  DateTimeForm.svelte  ExtractFromFileForm.svelte  FilterForm.svelte  HttpRequestForm.svelte  IfForm.svelte  ToolForm.svelte  (+11 more)
frontend/src/lib/components/tools/: ToolsView.svelte
frontend/src/lib/flow/: WorkflowControl.svelte
frontend/src/lib/flow/nodes/: NoteNode.svelte  WorkflowNode.svelte  definitions.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
nexus-core/: Cargo.toml  Dockerfile
nexus-core/src/: db.rs  main.rs  state.rs
nexus-core/src/clients/: mod.rs  openai.rs  openrouter.rs
nexus-core/src/engine/: executor.rs  mod.rs
nexus-core/src/handlers/: mod.rs
nexus-core/src/models/: mod.rs
(+9 files in other folders)
