[package]
name = "nexus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
dotenvy = "0.15"
rquickjs = { version = "0.6", features = ["full", "macro"] }
base64 = "0.22"
rmcp = { version = "0.14.0", features = ["client", "transport-streamable-http-client-reqwest"] }
feed-rs = "2.3.1"
